generated/parser.bison.output
Terminals unused in grammar

    JMP
    JMPCOND
    NOT


State 74 conflicts: 1 shift/reduce
State 79 conflicts: 7 shift/reduce
State 80 conflicts: 7 shift/reduce
State 81 conflicts: 7 shift/reduce
State 82 conflicts: 7 shift/reduce
State 83 conflicts: 7 shift/reduce
State 97 conflicts: 2 shift/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce
State 102 conflicts: 7 shift/reduce
State 103 conflicts: 7 shift/reduce
State 132 conflicts: 1 shift/reduce
State 157 conflicts: 1 shift/reduce


Grammar

    0 $accept: code $end

    1 code: declarations fonctions affichage

    2 declarations: %empty
    3             | declarations var VAR '=' expr ';'

    4 $@1: %empty

    5 fonctions: def VAR ':' '(' args ')' arrow '{' $@1 instruction '}'

    6 args: VAR
    7     | args ',' args

    8 draw_func: VAR in '[' NUM ',' NUM ']'
    9          | VAR
   10          | draw_func ',' draw_func

   11 $@2: %empty

   12 affichage: DRAW draw_func '{' $@2 draw_args '}'
   13          | DRAW draw_func ';'

   14 draw_args: color ':' PARAM
   15          | style ':' PARAM
   16          | label ':' STRING
   17          | xmin ':' NUM
   18          | xmin ':' VAR
   19          | xmax ':' NUM
   20          | xmax ':' VAR
   21          | ymin ':' NUM
   22          | ymin ':' VAR
   23          | ymax ':' NUM
   24          | ymax ':' VAR
   25          | draw_args ',' draw_args

   26 instruction: %empty
   27            | expr ';'
   28            | RETURN expr ';'

   29 $@3: %empty

   30 $@4: %empty

   31 instruction: IF logic '{' $@3 instruction $@4 '}' ELSE '{' instruction '}'
   32            | FOR VAR in '[' expr ':' expr ':' expr ']' '{' instruction '}'
   33            | WHILE logic '{' instruction '}'

   34 logic: expr SUP expr
   35      | expr INF expr
   36      | expr SUP_STRICT expr
   37      | expr INF_STRICT expr
   38      | expr EQUAL expr
   39      | expr NOT_EQ expr
   40      | expr AND expr
   41      | expr OR expr

   42 expr: NUM
   43     | SIN '(' expr ')'
   44     | COS '(' expr ')'
   45     | TAN '(' expr ')'
   46     | ARCCOS '(' expr ')'
   47     | ARCSIN '(' expr ')'
   48     | ARCTAN '(' expr ')'
   49     | SINH '(' expr ')'
   50     | COSH '(' expr ')'
   51     | TANH '(' expr ')'
   52     | ARCCOSH '(' expr ')'
   53     | ARCSINH '(' expr ')'
   54     | ARCTANH '(' expr ')'
   55     | '(' expr ')'
   56     | expr '+' expr
   57     | expr '-' expr
   58     | expr '*' expr
   59     | expr '/' expr
   60     | expr '&' expr
   61     | expr '|' expr
   62     | expr '^' expr
   63     | POW '(' expr ',' expr ')'
   64     | EXP '(' expr ')'
   65     | LOG '(' expr ')'
   66     | SQRT '(' expr ')'
   67     | VAR
   68     | VAR '=' expr
   69     | VAR PLUS_EQUAL expr
   70     | VAR MIN_EQUAL expr
   71     | VAR TIMES_EQUAL expr
   72     | VAR DIV_EQUAL expr


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 60
    '(' (40) 5 43 44 45 46 47 48 49 50 51 52 53 54 55 63 64 65 66
    ')' (41) 5 43 44 45 46 47 48 49 50 51 52 53 54 55 63 64 65 66
    '*' (42) 58
    '+' (43) 56
    ',' (44) 7 8 10 25 63
    '-' (45) 57
    '/' (47) 59
    ':' (58) 5 14 15 16 17 18 19 20 21 22 23 24 32
    ';' (59) 3 13 27 28
    '=' (61) 3 68
    '[' (91) 8 32
    ']' (93) 8 32
    '^' (94) 62
    '{' (123) 5 12 31 32 33
    '|' (124) 61
    '}' (125) 5 12 31 32 33
    error (256)
    var (258) 3
    def (259) 5
    in (260) 8 32
    arrow (261) 5
    RETURN (262) 28
    color (263) 14
    style (264) 15
    label (265) 16
    xmin (266) 17 18
    xmax (267) 19 20
    ymin (268) 21 22
    ymax (269) 23 24
    PARAM (270) 14 15
    STRING (271) 16
    NUM <DOUBLE> (272) 8 17 19 21 23 42
    SIN <DOUBLE> (273) 43
    COS <DOUBLE> (274) 44
    POW <DOUBLE> (275) 63
    EXP <DOUBLE> (276) 64
    VAR <STRING> (277) 3 5 6 8 9 18 20 22 24 32 67 68 69 70 71 72
    FOR <ADDRESS> (278) 32
    IF <ADDRESS> (279) 31
    ELSE <ADDRESS> (280) 31
    WHILE <ADDRESS> (281) 33
    TAN <DOUBLE> (282) 45
    ARCCOS <DOUBLE> (283) 46
    ARCSIN <DOUBLE> (284) 47
    ARCTAN <DOUBLE> (285) 48
    COSH <DOUBLE> (286) 50
    SINH <DOUBLE> (287) 49
    TANH <DOUBLE> (288) 51
    ARCSINH <DOUBLE> (289) 53
    ARCCOSH <DOUBLE> (290) 52
    ARCTANH <DOUBLE> (291) 54
    SQRT <DOUBLE> (292) 66
    LOG <DOUBLE> (293) 65
    DRAW (294) 12 13
    JMP <BOOL> (295)
    JMPCOND <BOOL> (296)
    PLUS_EQUAL <DOUBLE> (297) 69
    MIN_EQUAL <DOUBLE> (298) 70
    TIMES_EQUAL <DOUBLE> (299) 71
    DIV_EQUAL <DOUBLE> (300) 72
    EQUAL <BOOL> (301) 38
    NOT_EQ <BOOL> (302) 39
    INF_STRICT <BOOL> (303) 37
    SUP_STRICT <BOOL> (304) 36
    INF <BOOL> (305) 35
    SUP <BOOL> (306) 34
    AND <BOOL> (307) 40
    OR <BOOL> (308) 41
    NOT <BOOL> (309)


Nonterminals, with rules where they appear

    $accept (72)
        on left: 0
    code (73)
        on left: 1
        on right: 0
    declarations (74)
        on left: 2 3
        on right: 1 3
    fonctions (75)
        on left: 5
        on right: 1
    $@1 (76)
        on left: 4
        on right: 5
    args (77)
        on left: 6 7
        on right: 5 7
    draw_func (78)
        on left: 8 9 10
        on right: 10 12 13
    affichage (79)
        on left: 12 13
        on right: 1
    $@2 (80)
        on left: 11
        on right: 12
    draw_args (81)
        on left: 14 15 16 17 18 19 20 21 22 23 24 25
        on right: 12 25
    instruction (82)
        on left: 26 27 28 31 32 33
        on right: 5 31 32 33
    $@3 (83)
        on left: 29
        on right: 31
    $@4 (84)
        on left: 30
        on right: 31
    logic <BOOL> (85)
        on left: 34 35 36 37 38 39 40 41
        on right: 31 33
    expr <DOUBLE> (86)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
        on right: 3 27 28 32 34 35 36 37 38 39 40 41 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 68 69 70 71 72


State 0

    0 $accept: . code $end

    $default  reduce using rule 2 (declarations)

    code          go to state 1
    declarations  go to state 2


State 1

    0 $accept: code . $end

    $end  shift, and go to state 3


State 2

    1 code: declarations . fonctions affichage
    3 declarations: declarations . var VAR '=' expr ';'

    var  shift, and go to state 4
    def  shift, and go to state 5

    fonctions  go to state 6


State 3

    0 $accept: code $end .

    $default  accept


State 4

    3 declarations: declarations var . VAR '=' expr ';'

    VAR  shift, and go to state 7


State 5

    5 fonctions: def . VAR ':' '(' args ')' arrow '{' $@1 instruction '}'

    VAR  shift, and go to state 8


State 6

    1 code: declarations fonctions . affichage

    DRAW  shift, and go to state 9

    affichage  go to state 10


State 7

    3 declarations: declarations var VAR . '=' expr ';'

    '='  shift, and go to state 11


State 8

    5 fonctions: def VAR . ':' '(' args ')' arrow '{' $@1 instruction '}'

    ':'  shift, and go to state 12


State 9

   12 affichage: DRAW . draw_func '{' $@2 draw_args '}'
   13          | DRAW . draw_func ';'

    VAR  shift, and go to state 13

    draw_func  go to state 14


State 10

    1 code: declarations fonctions affichage .

    $default  reduce using rule 1 (code)


State 11

    3 declarations: declarations var VAR '=' . expr ';'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 34


State 12

    5 fonctions: def VAR ':' . '(' args ')' arrow '{' $@1 instruction '}'

    '('  shift, and go to state 35


State 13

    8 draw_func: VAR . in '[' NUM ',' NUM ']'
    9          | VAR .

    in  shift, and go to state 36

    $default  reduce using rule 9 (draw_func)


State 14

   10 draw_func: draw_func . ',' draw_func
   12 affichage: DRAW draw_func . '{' $@2 draw_args '}'
   13          | DRAW draw_func . ';'

    ';'  shift, and go to state 37
    '{'  shift, and go to state 38
    ','  shift, and go to state 39


State 15

   42 expr: NUM .

    $default  reduce using rule 42 (expr)


State 16

   43 expr: SIN . '(' expr ')'

    '('  shift, and go to state 40


State 17

   44 expr: COS . '(' expr ')'

    '('  shift, and go to state 41


State 18

   63 expr: POW . '(' expr ',' expr ')'

    '('  shift, and go to state 42


State 19

   64 expr: EXP . '(' expr ')'

    '('  shift, and go to state 43


State 20

   67 expr: VAR .
   68     | VAR . '=' expr
   69     | VAR . PLUS_EQUAL expr
   70     | VAR . MIN_EQUAL expr
   71     | VAR . TIMES_EQUAL expr
   72     | VAR . DIV_EQUAL expr

    PLUS_EQUAL   shift, and go to state 44
    MIN_EQUAL    shift, and go to state 45
    TIMES_EQUAL  shift, and go to state 46
    DIV_EQUAL    shift, and go to state 47
    '='          shift, and go to state 48

    $default  reduce using rule 67 (expr)


State 21

   45 expr: TAN . '(' expr ')'

    '('  shift, and go to state 49


State 22

   46 expr: ARCCOS . '(' expr ')'

    '('  shift, and go to state 50


State 23

   47 expr: ARCSIN . '(' expr ')'

    '('  shift, and go to state 51


State 24

   48 expr: ARCTAN . '(' expr ')'

    '('  shift, and go to state 52


State 25

   50 expr: COSH . '(' expr ')'

    '('  shift, and go to state 53


State 26

   49 expr: SINH . '(' expr ')'

    '('  shift, and go to state 54


State 27

   51 expr: TANH . '(' expr ')'

    '('  shift, and go to state 55


State 28

   53 expr: ARCSINH . '(' expr ')'

    '('  shift, and go to state 56


State 29

   52 expr: ARCCOSH . '(' expr ')'

    '('  shift, and go to state 57


State 30

   54 expr: ARCTANH . '(' expr ')'

    '('  shift, and go to state 58


State 31

   66 expr: SQRT . '(' expr ')'

    '('  shift, and go to state 59


State 32

   65 expr: LOG . '(' expr ')'

    '('  shift, and go to state 60


State 33

   55 expr: '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 61


State 34

    3 declarations: declarations var VAR '=' expr . ';'
   56 expr: expr . '+' expr
   57     | expr . '-' expr
   58     | expr . '*' expr
   59     | expr . '/' expr
   60     | expr . '&' expr
   61     | expr . '|' expr
   62     | expr . '^' expr

    '+'  shift, and go to state 62
    '-'  shift, and go to state 63
    '*'  shift, and go to state 64
    '/'  shift, and go to state 65
    '^'  shift, and go to state 66
    ';'  shift, and go to state 67
    '&'  shift, and go to state 68
    '|'  shift, and go to state 69


State 35

    5 fonctions: def VAR ':' '(' . args ')' arrow '{' $@1 instruction '}'

    VAR  shift, and go to state 70

    args  go to state 71


State 36

    8 draw_func: VAR in . '[' NUM ',' NUM ']'

    '['  shift, and go to state 72


State 37

   13 affichage: DRAW draw_func ';' .

    $default  reduce using rule 13 (affichage)


State 38

   12 affichage: DRAW draw_func '{' . $@2 draw_args '}'

    $default  reduce using rule 11 ($@2)

    $@2  go to state 73


State 39

   10 draw_func: draw_func ',' . draw_func

    VAR  shift, and go to state 13

    draw_func  go to state 74


State 40

   43 expr: SIN '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 75


State 41

   44 expr: COS '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 76


State 42

   63 expr: POW '(' . expr ',' expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 77


State 43

   64 expr: EXP '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 78


State 44

   69 expr: VAR PLUS_EQUAL . expr

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 79


State 45

   70 expr: VAR MIN_EQUAL . expr

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 80


State 46

   71 expr: VAR TIMES_EQUAL . expr

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 81


State 47

   72 expr: VAR DIV_EQUAL . expr

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 82


State 48

   68 expr: VAR '=' . expr

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 83


State 49

   45 expr: TAN '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 84


State 50

   46 expr: ARCCOS '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 85


State 51

   47 expr: ARCSIN '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 86


State 52

   48 expr: ARCTAN '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 87


State 53

   50 expr: COSH '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 88


State 54

   49 expr: SINH '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 89


State 55

   51 expr: TANH '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 90


State 56

   53 expr: ARCSINH '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 91


State 57

   52 expr: ARCCOSH '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 92


State 58

   54 expr: ARCTANH '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 93


State 59

   66 expr: SQRT '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 94


State 60

   65 expr: LOG '(' . expr ')'

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 95


State 61

   55 expr: '(' expr . ')'
   56     | expr . '+' expr
   57     | expr . '-' expr
   58     | expr . '*' expr
   59     | expr . '/' expr
   60     | expr . '&' expr
   61     | expr . '|' expr
   62     | expr . '^' expr

    '+'  shift, and go to state 62
    '-'  shift, and go to state 63
    '*'  shift, and go to state 64
    '/'  shift, and go to state 65
    '^'  shift, and go to state 66
    ')'  shift, and go to state 96
    '&'  shift, and go to state 68
    '|'  shift, and go to state 69


State 62

   56 expr: expr '+' . expr

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 97


State 63

   57 expr: expr '-' . expr

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 98


State 64

   58 expr: expr '*' . expr

    NUM      shift, and go to state 15
    SIN      shift, and go to state 16
    COS      shift, and go to state 17
    POW      shift, and go to state 18
    EXP      shift, and go to state 19
    VAR      shift, and go to state 20
    TAN      shift, and go to state 21
    ARCCOS   shift, and go to state 22
    ARCSIN   shift, and go to state 23
    ARCTAN   shift, and go to state 24
    COSH     shift, and go to state 25
    SINH     shift, and go to state 26
    TANH     shift, and go to state 27
    ARCSINH  shift, and go to state 28
    ARCCOSH  shift, and go to state 29
    ARCTANH  shift, and go to state 30
    SQRT     shift, and go to state 31
    LOG      shift, and go to state 32
    '('      shift, and go to state 33

    expr  go to state 99


State 65

   59 expr: expr '/' . expr
